bulk update support for skipping already updated deployments

--- a/src/bulk-deployments/bulk-deployment-namespacewildcard-modification.env
+++ b/src/bulk-deployments/bulk-deployment-namespacewildcard-modification.env
@@ -24,3 +24,5 @@ deployments_wildcards=(
 "deployment.*wildcard-2,new-image,443,20m,200Mi,/healthz/live,/healthz/live,/healthz/ready,HTTPS"
 "deployment.*wildcard-3,new-image,443,20m,200Mi,/healthz/live,/healthz/live,/healthz/ready,HTTPS"
 )
+
+ALREADY_UPDATED=0
