--- a/src/bulk-deployments/bulk-deployment-modification.env
+++ b/src/bulk-deployments/bulk-deployment-modification.env
@@ -22,3 +22,5 @@ deployments_wildcards=(
 "namespace-2,deployment.*wildcard-2,443,20m,200Mi,/healthz/live,/healthz/live,/healthz/ready,HTTPS"
 "namespace-3,deployment.*wildcard-3,443,20m,200Mi,/healthz/live,/healthz/live,/healthz/ready,HTTPS"
 )
+
+ALREADY_UPDATED=0
