--- a/src/Dockerfile.bulk-manifest-export
+++ b/src/Dockerfile.bulk-manifest-export
@@ -11,22 +11,27 @@ COPY bulk-manifest-export /app/bulk-manifest-export
 RUN chmod +x /app/bulk-manifest-export
 
 # Install any necessary dependencies (example: curl)
-RUN apt-get update && apt-get install -y \
+RUN apt update && apt install -y \
     curl \
     apt-transport-https \
     dotnet-runtime-8.0 \
     jq \
+    unzip \
     && rm -rf /var/lib/apt/lists/* \
     && curl -L https://github.com/majorsilence/Fileupload/releases/download/v1.0.7/linux-x64.zip -o /tmp/fileupload.zip \
-    && apt install -y unzip \
-    && unzip /tmp/fileupload.zip -d /opt/townsuite \
+    && mkdir -p /opt/townsuite/fileupload \
+    && unzip /tmp/fileupload.zip -d /opt/townsuite/fileupload \
     && rm /tmp/fileupload.zip \
-    && echo '#!/bin/bash\nexec dotnet /opt/townsuite/linux-x64/FileUpload.dll "$@"' > /usr/local/bin/fileupload.sh \
-    && chmod +x /usr/local/bin/fileupload.sh \
-    && ln -s /usr/local/bin/fileupload.sh /usr/bin/fileupload \
+    && rm -rf /opt/townsuite/fileupload/publish \
+    && echo '#!/bin/bash\nexec dotnet /opt/townsuite/fileupload/FileUpload.dll "$@"' > /opt/townsuite/fileupload.sh \
+    && chmod +x /opt/townsuite/fileupload.sh \
+    && ln -s /opt/townsuite/fileupload.sh /usr/bin/fileupload \
     && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
     && chmod +x kubectl \
-    && mv kubectl /usr/local/bin/
+    && mv kubectl /usr/local/bin/ \
+    && rm -rf /var/lib/apt/lists/*
 
 
 ENTRYPOINT ["/bin/bash", "-c"]
+
+# docker build --no-cache --progress plain -f Dockerfile.bulk-manifest-export -t townsuite/bulk-manifest-export:1.0.0 --rm=true .
